2006-01-18  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/socket.h (struct sockaddr_storage): Fix typo in
	ss_family member name.

2006-01-16  Christopher Faylor  <cgf@timesys.com>

	* include/cygwin/version.h: Bump DLL minor version number to 20.

2006-01-13  Corinna Vinschen  <corinna@vinschen.de>

	* uname.cc (uname): Concatenate a "-WOW64" to utsname's sysname
	member to see when running under WOW64.

2006-01-13  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (cygwin_setsockopt): Ignore errors when setting IP_TOS on
	Windows 2000 and above. Clarify the comment about IP_TOS and move
	to the place where the magic happens.
	(get_ifconf): Remove unused code.
	* wincap.h (wincaps::has_disabled_user_tos_setting): New element.
	* wincap.cc: Implement above element throughout.

2006-01-12  Christopher Faylor  <cgf@timesys.com>

	* fhandler_console.cc (set_console_state_for_spawn): Fix to recognize
	ttys >= 0.

2006-01-12  Christopher Faylor  <cgf@timesys.com>

	* fhandler.h (set_console_state_for_spawn): Whackamole the argument
	back to a bool.
	* spawn.cc (spawn_guts): Ditto, i.e., once again call
	set_console_state_for_spawn with an indication of whether we're about
	to start a cygwin process.
	* fhandler_console.cc (set_console_state_for_spawn): Don't set the
	console state if we know we're starting a cygwin process or if we're
	using a "real" tty.

2006-01-10  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (dll_crt0_0): Remove call to wincap.init.
	* init.cc (dll_entry): Rename is_wow64_proc to wow64_test_stack_marker.
	Call wincap.init here before doing anything else.  Use wincap.is_wow64
	to determine if we're running in a WOW64 emulator.
	* mmap.cc (MapViewNT): Don't use AT_ROUND_TO_PAGE in WOW64, it's
	apparently not supported.
	(mmap64): Don't create mappings beyond EOF, which would need to use
	AT_ROUND_TO_PAGE, on WOW64.
	* wincap.cc (wincap): Throw into the .cygwin_dll_common section.