@@ -1,5 +1,12 @@
 2006-01-18  Corinna Vinschen  <corinna@vinschen.de>
 
+	* autoload.cc (rresvport): Remove.
+	* net.cc (last_used_rrecvport): New global shared variable.
+	(cygwin_rresvport): Implement rresvport without using rresvport from
+	wsock32.
+
+2006-01-18  Corinna Vinschen  <corinna@vinschen.de>
+
 	* include/cygwin/socket.h (struct sockaddr_storage): Fix typo in
 	ss_family member name.
 
